--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,15 +13,16 @@
 </head>
 
 <body class="text-center">
-<form class="form-signin" action="dashboard.html">
+<form class="form-signin" action="dashboard.html" th:action="@{/user/login}" method="post">
     <img class="mb-4" src="asserts/img/bootstrap-solid.svg" th:src="@{asserts/img/bootstrap-solid.svg}" alt=""
          width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">Please sign in</h1>
+    <p th:text="${session.msg}" style="color: red" th:if="${not #strings.isEmpty(session.msg)}"></p>
     <label class="sr-only" th:text="#{login.username}">Username</label>
-    <input type="text" class="form-control" placeholder="Username" th:placeholder="#{login.username}" required=""
+    <input name="username" type="text" class="form-control" placeholder="Username" th:placeholder="#{login.username}" required=""
            autofocus="">
     <label class="sr-only" th:text="#{login.pwd}">Password</label>
-    <input type="password" class="form-control" placeholder="Password" th:placeholder="#{login.pwd}" required="">
+    <input name="password" type="password" class="form-control" placeholder="Password" th:placeholder="#{login.pwd}" required="">
     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" value="remember-me"> [[#{login.remember}]]
