--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -52,7 +52,7 @@
         <div th:replace="~{commons/common::leftbar(activeUri='emps')}"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <form>
+            <form method="post" th:action="@{/emp}">
                 <!--发送put请求修改员工数据-->
                 <!--
                 1、SpringMVC中配置HiddenHttpMethodFilter;（SpringBoot自动配置好的）
@@ -61,15 +61,15 @@
                 -->
                 <input type="hidden" name="id">
                 <div class="form-group">
-                    <label>LastName</label>
-                    <input name="lastName" type="text" class="form-control" placeholder="zhangsan">
+                    <label>姓名</label>
+                    <input name="lastName" type="text" class="form-control" placeholder="请输入员工姓名">
                 </div>
                 <div class="form-group">
-                    <label>Email</label>
-                    <input name="email" type="email" class="form-control" placeholder="zhangsan@atguigu.com" >
+                    <label>邮箱</label>
+                    <input name="email" type="email" class="form-control" placeholder="请输入邮箱" >
                 </div>
                 <div class="form-group">
-                    <label>Gender</label><br/>
+                    <label>性别</label><br/>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="gender" value="1">
                         <label class="form-check-label">男</label>
@@ -80,15 +80,15 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label>department</label>
+                    <label>部门</label>
                     <!--提交的是部门的id-->
                     <select class="form-control" name="department.id">
-                        <option>1</option>
+                        <option th:value="${dep.id}" th:each=" dep:${departments}" th:text="${dep.departmentName}">1</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Birth</label>
-                    <input name="birth" type="text" class="form-control" placeholder="zhangsan">
+                    <label>生日</label>
+                    <input name="birth" type="text" class="form-control" placeholder="">
                 </div>
                 <button type="submit" class="btn btn-primary">添加</button>
             </form>
