--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -10,10 +10,10 @@
 
     <title>Dashboard Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link href="asserts/css/bootstrap.min.css" th:href="@{asserts/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="../asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.css}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="asserts/css/dashboard.css" th:href="@{asserts/css/dashboard.css}" rel="stylesheet">
+    <link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
     <style type="text/css">
         /* Chart.js */
 
@@ -52,6 +52,7 @@
         <div th:replace="~{commons/common::leftbar(activeUri='emps')}"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+            <!--通过employee是否为null，来判断页面是添加还是修改-->
             <form method="post" th:action="@{/emp}">
                 <!--发送put请求修改员工数据-->
                 <!--
@@ -59,23 +60,24 @@
                 2、页面创建一个post表单
                 3、创建一个input项，name="_method";值就是我们指定的请求方式
                 -->
-                <input type="hidden" name="id">
+                <input type="hidden" name="_method" value="put" th:if="${employee!=null}">
+                <input type="hidden" name="id" th:value="${employee.id}" th:if="${employee!=null}">
                 <div class="form-group">
                     <label>姓名</label>
-                    <input name="lastName" type="text" class="form-control" placeholder="请输入员工姓名">
+                    <input name="lastName" type="text" class="form-control" placeholder="请输入员工姓名" th:value="${employee!=null}?${employee.lastName}">
                 </div>
                 <div class="form-group">
                     <label>邮箱</label>
-                    <input name="email" type="email" class="form-control" placeholder="请输入邮箱" >
+                    <input name="email" type="email" class="form-control" placeholder="请输入邮箱" th:value="${employee!=null}?${employee.email}">
                 </div>
                 <div class="form-group">
                     <label>性别</label><br/>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="1">
+                        <input class="form-check-input" type="radio" name="gender" value="1" th:checked="${employee!=null}?${employee.gender==1}">
                         <label class="form-check-label">男</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="0">
+                        <input class="form-check-input" type="radio" name="gender" value="0" th:checked="${employee!=null}?${employee.gender==0}">>
                         <label class="form-check-label">女</label>
                     </div>
                 </div>
@@ -83,14 +85,14 @@
                     <label>部门</label>
                     <!--提交的是部门的id-->
                     <select class="form-control" name="department.id">
-                        <option th:value="${dep.id}" th:each=" dep:${departments}" th:text="${dep.departmentName}">1</option>
+                        <option th:selected="${employee!=null}?${dep.id==employee.department.id}" th:value="${dep.id}" th:each=" dep:${departments}" th:text="${dep.departmentName}">1</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>生日</label>
-                    <input name="birth" type="text" class="form-control" placeholder="">
+                    <input name="birth" type="text" class="form-control" placeholder="" th:value="${employee!=null}?${#dates.format(employee.birth, 'yyyy-MM-dd HH:mm:ss')}">
                 </div>
-                <button type="submit" class="btn btn-primary">添加</button>
+                <button type="submit" class="btn btn-primary" th:text="${employee!=null}?'修改':'添加'">添加</button>
             </form>
         </main>
     </div>
@@ -100,18 +102,18 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js"
-        th:src="@{asserts/js/jquery-3.2.1.slim.min.js}"></script>
-<script type="text/javascript" src="asserts/js/popper.min.js" th:src="@{asserts/js/popper.min.js}"></script>
-<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:src="@{asserts/js/bootstrap.min.js}"></script>
+        th:src="@{/asserts/js/jquery-3.2.1.slim.min.js}"></script>
+<script type="text/javascript" src="asserts/js/popper.min.js" th:src="@{/asserts/js/popper.min.js}"></script>
+<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:src="@{/asserts/js/bootstrap.min.js}"></script>
 
 <!-- Icons -->
-<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{asserts/js/Chart.min.js}"></script>
+<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{/asserts/js/Chart.min.js}"></script>
 <script>
     /*feather.replace()*/
 </script>
 
 <!-- Graphs -->
-<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{asserts/js/Chart.min.js}"></script>
+<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{/asserts/js/Chart.min.js}"></script>
 <script>
     var ctx = document.getElementById("myChart");
     var myChart = new Chart(ctx, {
