--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -10,10 +10,10 @@
 
     <title>Dashboard Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link href="asserts/css/bootstrap.min.css" th:href="@{asserts/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="asserts/css/bootstrap.min.css" th:href="@{/asserts/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="asserts/css/dashboard.css" th:href="@{asserts/css/dashboard.css}" rel="stylesheet">
+    <link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
     <style type="text/css">
         /* Chart.js */
 
@@ -75,7 +75,7 @@
                             <td th:text="${emp.department.departmentName}"></td>
                             <td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm:ss')}"></td>
                             <td>
-                                <button class="btn btn-sm btn-primary">编辑</button>
+                                <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
                                 <button class="btn btn-sm btn-danger">删除</button>
                             </td>
                         </tr>
@@ -91,17 +91,17 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js"
         th:src="@{asserts/js/jquery-3.2.1.slim.min.js}"></script>
-<script type="text/javascript" src="asserts/js/popper.min.js" th:src="@{asserts/js/popper.min.js}"></script>
-<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:src="@{asserts/js/bootstrap.min.js}"></script>
+<script type="text/javascript" src="asserts/js/popper.min.js" th:src="@{/asserts/js/popper.min.js}"></script>
+<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:src="@{/asserts/js/bootstrap.min.js}"></script>
 
 <!-- Icons -->
-<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{asserts/js/Chart.min.js}"></script>
+<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{/asserts/js/Chart.min.js}"></script>
 <script>
     /*feather.replace()*/
 </script>
 
 <!-- Graphs -->
-<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{asserts/js/Chart.min.js}"></script>
+<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{/asserts/js/Chart.min.js}"></script>
 <script>
     var ctx = document.getElementById("myChart");
     var myChart = new Chart(ctx, {
