--- a/src/main/resources/templates/error/4xx.html
+++ b/src/main/resources/templates/error/4xx.html
@@ -178,7 +178,12 @@
 				</nav>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h1>404</h1>
+					<h1>[[${timestamp}]]</h1>
+					<h1 th:text="${status}"></h1>
+					<h1 th:text="${error}"></h1>
+					<!--该值一般不存在-->
+					<h1 th:text="${exception}"></h1>
+					<h1 th:text="${message}"></h1>
 				</main>
 			</div>
 		</div>
