commit error complete

--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -181,8 +181,11 @@
 					<h1>[[${timestamp}]]</h1>
 					<h1 th:text="${status}"></h1>
 					<h1 th:text="${error}"></h1>
-					<h1>[[${exception}]]</h1>
-					<h1 th:text="${message}"></h1>
+					<h1 th:text="${exception}"></h1>
+					<h1 th:text="${ext.status}"></h1>
+					<h1 th:text="${ext.exception}"></h1>
+					<h1 th:text="${ext.message}"></h1>
+					<h1 th:text="${company}"></h1>
 				</main>
 			</div>
 		</div>
